fix: extra padding below about me cards on home

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -12,7 +12,7 @@ main.home .content-wrapper {
         display: flex;
         flex-direction: row;
         gap: 2rem;
-        margin-top: 5rem;
+        margin: 5rem 0 2rem;
         
         .site-section-card {
             display: flex;
